# cavesim

./: .gitignore  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/notepads/bread-and-bureaucracy/: decisions.md  issues.md  learning.md  learnings.md
.sisyphus/plans/: bread-and-bureaucracy.md
data/biome_seeds/: cave_troll_0.md  dwarves_0.md  gnome_0.md  gnome_1.md  kobold_0.md  mole_folk_0.md  mole_folk_1.md
data/config/: tags.yaml
data/content/ingredients/: test_ing.yaml
data/content/locations/goblin_slums/: decrees.yaml  ingredients.yaml  recipes.yaml
docs/: DATA_ARCHITECTURE.md  GAME_DESIGN_OVERVIEW.md  UI_SPECS.md
src/core/: primatives.py
src/engine/: cooking.py  decree.py  ingest.py  save.py
src/models/: content.py  enums.py
src/tui/: app.py  state.py
src/tui/screens/: crisis.py  map.py  menu.py  settings.py  settlement.py  shift.py  testing.py
tests/: test_hello_world.py
tests/ui/: test_crisis.py  test_meta.py  test_shell.py  test_shift.py
tests/unit/: test_cooking.py  test_decree.py  test_ingestion.py  test_models.py
